# debt-bonds-dapp

./: .gitignore  README.md
.githooks/: prepare-commit-msg
chain/: Anchor.toml  package-lock.json
chain/programs/debt-bonds/: Cargo.toml
chain/programs/debt-bonds/src/: lib.rs
chain/tests/: debt-bonds.ts
dapp/: .env.local.example  package-lock.json  package.json
dapp/src/app/: globals.css  layout.tsx  page.tsx
dapp/src/app/airdrop/: page.tsx
dapp/src/app/tokens/: page.tsx
dapp/src/app/tokens/[mint]/: page.tsx
dapp/src/components/: AirdropForm.tsx  Header.tsx  SolanaProviders.tsx  WalletStatusCard.tsx
dapp/src/components/tokens/: CreateTokenForm.tsx  TokensClient.tsx  TokensTable.tsx
dapp/src/components/tokens/details/: BondActions.tsx  BondholdersTable.tsx  RegisterBondCard.tsx  StableCoinActions.tsx  TokenDetailsClient.tsx
dapp/src/lib/: cluster.ts  createBond.ts  createToken.ts  tokens.ts
dapp/src/lib/program/: bondActions.ts  client.ts  idl.json  idl.ts  useDetails.ts
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: config.ts  index.ts  util.ts  wallet.ts
mcp-server/src/solana/: accounts.ts  bondActions.ts  client.ts  createBond.ts  queries.ts  setupMarket.ts  transfers.ts  tx.ts
scripts/: install-git-hooks.sh
